--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,6 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-
 # Authenticate to the the server via ssh
 # and run our deployment script
 jobs:
@@ -22,4 +21,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSHKEY }}
-          script: "cd domains/demo.wbcrm.in/public_html && ./.scripts/deploy.sh"
+          script: "cd domains/wbcrm.in/public_html && ./.scripts/deploy.sh"
