--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "spatie/db-dumper": "^3.6",
         "spatie/laravel-activitylog": "^4.8",
         "yajra/laravel-datatables-oracle": "^10.0"
     },
