--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "barryvdh/laravel-dompdf": "^2.2",
         "defuse/php-encryption": "^2.4",
         "google/apiclient": "^2.14",
         "guzzlehttp/guzzle": "^7.2",
